# poly_ui

./: .gitignore  .gitpod.Dockerfile  Cargo.toml  README.md
.github/workflows/: changelog_generation.yml  ci.yml  dev_ci.yml  dev_pr_ci.yml  main_ci.yml  main_pr_ci.yml  rust.yml
src/: lib.rs  main.rs
src/examples/: ui_example.polyui
src/poly_ui/: components.rs  layouts.rs  widgets.rs
src/poly_ui/app/: app_trait.rs  canvas_trait.rs  mod.rs  painter_trait.rs  windows_manager_trait.rs
src/poly_ui/components/: hierarchy.rs  mod.rs  signal.rs  transform.rs
src/poly_ui/controls/: mod.rs  push_button.rs
src/poly_ui/events/: event.rs  event_handler.rs  input_state.rs  mod.rs
src/poly_ui/layouts/: canvas_layout.rs  canvas_layout_widget.rs  grid_layout.rs  layout.rs  layout_items_size_gen.rs  layout_trait.rs  linear_layout.rs  linear_layout_widget.rs  mod.rs
src/poly_ui/sdl2/: app.rs  canvas.rs  mod.rs  painter.rs  window_provider.rs  windows_manager.rs
src/poly_ui/widgets/: base.rs  base_widget.rs  layout_items_size_gen.rs  layout_widget_trait.rs  linear_layout_widget.rs  mock_widget.rs  mod.rs  ownership.rs  widget.rs  widget_trait.rs  window.rs  window_provider_trait.rs  window_trait.rs
