[package]
name = "poly_ui"
version = "0.1.0"
authors = ["Squares <m.piotr@moscicki.pl>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.32.1", features = ["ttf"] }
nalgebra = "0.21.1"
uuid = { version = "0.8.1", features = ["v4"] }
